Problem when using Cast modifier with Wireframe modifier #42054

Closed
opened 2014-10-03 09:58:52 +02:00 by Leon Cheung · 6 comments
Member

System Information
Win8 64bit | GTX680

Blender Version
Broken: 2.72 a1d80b9

Short description of error
It seems that the Wireframe modifier didn't handle data well after the Cast modifier, unless apply it first.

Exact steps for others to reproduce the error
Please see attched image and file.

cast_wireframe.jpg

cast_wireframe.blend

Thanks for checking.

**System Information** Win8 64bit | GTX680 **Blender Version** Broken: 2.72 a1d80b9 **Short description of error** It seems that the Wireframe modifier didn't handle data well after the Cast modifier, unless apply it first. **Exact steps for others to reproduce the error** Please see attched image and file. ![cast_wireframe.jpg](https://archive.blender.org/developer/F114322/cast_wireframe.jpg) [cast_wireframe.blend](https://archive.blender.org/developer/F114324/cast_wireframe.blend) Thanks for checking.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Bastien Montagne self-assigned this 2014-10-03 11:57:52 +02:00

This issue was referenced by d4758badf6

This issue was referenced by d4758badf60f70296d8e51fe1a42cc174f507024

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d4758badf6.

Closed by commit d4758badf6.

This issue was referenced by e7f5b69867

This issue was referenced by e7f5b6986729b2399dba81cb37592ab589be7560
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42054
No description provided.