Fix T42054: Problem when using Cast modifier with Wireframe modifier.

Wireframe modifier needs valid normals, let's ensure that!